--- a/ProyectoFinal_ValleYbañez_Matias/SCSS/style.scss
+++ b/ProyectoFinal_ValleYbañez_Matias/SCSS/style.scss
@@ -8,4 +8,5 @@
     #intro {
       width: 90% !important; }
     .grid-fila {
-      width: auto !important; } }
+      width: auto !important; } 
+    }
